# CSC1106-Practical-Group

./: .gitignore
g21_practical/: Cargo.toml  README.txt
g21_practical/curl/: commands
g21_practical/migrations/: schema.sql
g21_practical/src/: auth.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs
g21_practical/static/: bugform.html  index.html
